--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -13,26 +13,36 @@
 
 <div class="container">
     <div class="row">
-        <div class="col">
-            <form>
+        <div class="col align-items-start">
+            <form id="login-form">
                 <h1 class="h3 mb-3 fw-normal">Sign in</h1>
                 <input type="text" id="inputUsernameS" class="form-control my-1" placeholder="Username" required
                        autofocus>
                 <input type="password" id="inputPasswordS" class="form-control my-1" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary" type="submit">Sign in</button>
-
+                <input class="btn btn-lg btn-primary" type="submit" id="loginBtn"></input>
             </form>
+            <div class="alert alert-danger" role="alert" id="alertLogin">
+                Wrong username or password.
+            </div>
         </div>
-        <div class="col mx-5">
-            <form>
+        <div class="col align-items-end">
+            <form id="register-form">
                 <h1 class="h3 mb-3 fw-normal">Register</h1>
                 <input type="text" id="inputEmailR" class="form-control my-1" placeholder="Email address" required>
                 <input type="text" id="inputNameR" class="form-control my-1" placeholder="Name" required>
                 <input type="text" id="inputSurnameR" class="form-control my-1" placeholder="Surname" required>
                 <input type="text" id="inputUsernameR" class="form-control my-1" placeholder="Username" required>
                 <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password" required>
-                <button class="btn btn-lg btn-primary" type="submit">Register</button>
+                <div class="progress my-2">
+                    <div class="progress-bar" id="progressbar" role="progressbar" aria-valuenow="25"
+                         aria-valuemin="0" aria-valuemax="100">
+                    </div>
+                </div>
+                <input class="btn btn-lg btn-primary" type="submit" id="registerBtn"></input>
             </form>
+            <div class="alert alert-danger" role="alert" id="alertRegister">
+
+            </div>
         </div>
     </div>
 </div>
