Dodanie endpoint do rejestracji

--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -28,11 +28,11 @@
         <div class="col align-items-end">
             <form id="register-form">
                 <h1 class="h3 mb-3 fw-normal">Register</h1>
-                <input type="text" id="inputEmailR" class="form-control my-1" placeholder="Email address" required>
-                <input type="text" id="inputNameR" class="form-control my-1" placeholder="Name" required>
-                <input type="text" id="inputSurnameR" class="form-control my-1" placeholder="Surname" required>
-                <input type="text" id="inputUsernameR" class="form-control my-1" placeholder="Username" required>
-                <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password" required>
+                <input type="text" id="inputEmailR" class="form-control my-1" name="email" placeholder="Email address" required >
+                <input type="text" id="inputNameR" class="form-control my-1" placeholder="Name" name="name" required>
+                <input type="text" id="inputSurnameR" class="form-control my-1" placeholder="Surname" name="surname" required>
+                <input type="text" id="inputUsernameR" class="form-control my-1" placeholder="Username" name="username" required>
+                <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password" name="password" required>
                 <div class="progress my-2">
                     <div class="progress-bar" id="progressbar" role="progressbar" aria-valuenow="25"
                          aria-valuemin="0" aria-valuemax="100">
