--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -19,8 +19,8 @@
                 <input type="text" id="inputUsernameS" class="form-control my-1" placeholder="Username" required
                        autofocus>
                 <input type="password" id="inputPasswordS" class="form-control my-1" placeholder="Password" required>
-                <input class="btn btn-lg btn-primary" type="submit" id="loginBtn"></input>
             </form>
+            <input class="btn btn-lg btn-primary" type="button" id="loginBtn" value="Sign in"></input>
             <div class="alert alert-danger" role="alert" id="alertLogin">
                 Wrong username or password.
             </div>
@@ -38,8 +38,8 @@
                          aria-valuemin="0" aria-valuemax="100">
                     </div>
                 </div>
-                <input class="btn btn-lg btn-primary" type="submit" id="registerBtn"></input>
             </form>
+            <input class="btn btn-lg btn-primary" type="button" id="registerBtn" value="Sign up"></input>
             <div class="alert alert-danger" role="alert" id="alertRegister">
 
             </div>
