--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -16,9 +16,9 @@
         <div class="col align-items-start">
             <form id="login-form">
                 <h1 class="h3 mb-3 fw-normal">Sign in</h1>
-                <input type="text" id="inputUsernameS" class="form-control my-1" placeholder="Username" required
+                <input type="text" id="inputUsernameS" class="form-control my-1" name="username" placeholder="Username" required
                        autofocus>
-                <input type="password" id="inputPasswordS" class="form-control my-1" placeholder="Password" required>
+                <input type="password" id="inputPasswordS" class="form-control my-1" name="password" placeholder="Password" required>
             </form>
             <input class="btn btn-lg btn-primary" type="button" id="loginBtn" value="Sign in"></input>
             <div class="alert alert-danger" role="alert" id="alertLogin">
