--- a/src/uwsgi/app/templates/index.html
+++ b/src/uwsgi/app/templates/index.html
@@ -16,11 +16,13 @@
         <div class="col align-items-start">
             <form id="login-form">
                 <h1 class="h3 mb-3 fw-normal">Sign in</h1>
-                <input type="text" id="inputUsernameS" class="form-control my-1" name="username" placeholder="Username" required
+                <input type="text" id="inputUsernameS" class="form-control my-1" name="username" placeholder="Username"
+                       required
                        autofocus>
-                <input type="password" id="inputPasswordS" class="form-control my-1" name="password" placeholder="Password" required>
+                <input type="password" id="inputPasswordS" class="form-control my-1" name="password"
+                       placeholder="Password" required>
             </form>
-            <input class="btn btn-lg btn-primary" type="button" id="loginBtn" value="Sign in"></input>
+            <input class="btn btn-lg btn-primary" type="button" id="loginBtn" value="Sign in">
             <div class="alert alert-danger" role="alert" id="alertLogin">
                 Wrong username or password.
             </div>
@@ -28,18 +30,22 @@
         <div class="col align-items-end">
             <form id="register-form">
                 <h1 class="h3 mb-3 fw-normal">Register</h1>
-                <input type="text" id="inputEmailR" class="form-control my-1" name="email" placeholder="Email address" required >
+                <input type="text" id="inputEmailR" class="form-control my-1" name="email" placeholder="Email address"
+                       required>
                 <input type="text" id="inputNameR" class="form-control my-1" placeholder="Name" name="name" required>
-                <input type="text" id="inputSurnameR" class="form-control my-1" placeholder="Surname" name="surname" required>
-                <input type="text" id="inputUsernameR" class="form-control my-1" placeholder="Username" name="username" required>
-                <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password" name="password" required>
+                <input type="text" id="inputSurnameR" class="form-control my-1" placeholder="Surname" name="surname"
+                       required>
+                <input type="text" id="inputUsernameR" class="form-control my-1" placeholder="Username" name="username"
+                       required>
+                <input type="password" id="inputPasswordR" class="form-control my-1" placeholder="Password"
+                       name="password" required>
                 <div class="progress my-2">
                     <div class="progress-bar" id="progressbar" role="progressbar" aria-valuenow="25"
                          aria-valuemin="0" aria-valuemax="100">
                     </div>
                 </div>
             </form>
-            <input class="btn btn-lg btn-primary" type="button" id="registerBtn" value="Sign up"></input>
+            <input class="btn btn-lg btn-primary" type="button" id="registerBtn" value="Sign up">
             <div class="alert alert-danger" role="alert" id="alertRegister">
 
             </div>
