--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -14,6 +14,7 @@
 <div class="container">
     <div class="row float-right">
         <button type="button" class="btn btn-primary mx-2">New note</button>
+        <button type="button" class="btn btn-primary mx-2">New file</button>
         <form method="post" action="https://localhost/logout/">
             <input type="submit" class="btn btn-primary mx-2" value="Log out">
         </form>
