Dodanie możliwości dodania notatek

--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -13,8 +13,9 @@
 <body class="text-center">
 <div class="container">
     <div class="row float-right">
-        <button type="button" class="btn btn-primary mx-2">New note</button>
-        <button type="button" class="btn btn-primary mx-2">New file</button>
+        <a class="btn btn-primary mx-2" href="/list/">Home</a>
+        <a class="btn btn-primary mx-2" href="/note/">New note</a>
+        <button type="submit" class="btn btn-primary mx-2">New file</button>
         <form method="post" action="https://localhost/logout/">
             <input type="submit" class="btn btn-primary mx-2" value="Log out">
         </form>
