--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -15,7 +15,6 @@
     <div class="row float-right">
         <a class="btn btn-primary mx-2" href="/list/">Home</a>
         <a class="btn btn-primary mx-2" href="/note/">New note</a>
-        <button type="submit" class="btn btn-primary mx-2">New file</button>
         <form method="post" action="https://localhost/logout/">
             <input type="submit" class="btn btn-primary mx-2" value="Log out">
         </form>
@@ -27,31 +26,12 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Title</th>
+                        <th scope="col"></th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
+                    <tbody id="tbodyMy">
+
                     </tbody>
                 </table>
             </div>
@@ -61,33 +41,27 @@
                 <table class="table">
                     <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">First</th>
-                        <th scope="col">Last</th>
-                        <th scope="col">Handle</th>
+                        <th scope="col">Title</th>
+                        <th scope="col"></th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Mark</td>
-                        <td>Otto</td>
-                        <td>@mdo</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">2</th>
-                        <td>Jacob</td>
-                        <td>Thornton</td>
-                        <td>@fat</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">3</th>
-                        <td>Larry</td>
-                        <td>the Bird</td>
-                        <td>@twitter</td>
-                    </tr>
+                    <tbody id="tbodyPub">
+
                     </tbody>
                 </table>
+            </div>
+        </div>
+        <div class="col align-items-start">
+            <form id="note-form">
+                <h3>Preview</h3>
+                <input type="text" class="form-control my-3" placeholder="Title" name="title" id="title" disabled>
+                <textarea class="form-control my-3" rows="5" minlength="1" maxlength="1000" name="body" disabled
+                          id="body"></textarea>
+                <input type="password" class="form-control my-3" placeholder="Password" name="password" id="password">
+                <input type="submit" id="saveBtn" class="btn btn-primary my-2" value="Decrypt"><br>
+            </form>
+            <div class="alert alert-danger" role="alert" id="alert">
+
             </div>
         </div>
     </div>
