Dodanie odszyfrowywania notatki

--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -58,7 +58,7 @@
                 <textarea class="form-control my-3" rows="5" minlength="1" maxlength="1000" name="body" disabled
                           id="body"></textarea>
                 <input type="password" class="form-control my-3" placeholder="Password" name="password" id="password">
-                <input type="submit" id="saveBtn" class="btn btn-primary my-2" value="Decrypt"><br>
+                <input type="submit" id="decryptBtn" class="btn btn-primary my-2" value="Decrypt"><br>
             </form>
             <div class="alert alert-danger" role="alert" id="alert">
 
