Dodanie mozliwosci wgrywania plikow

--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -50,6 +50,20 @@
                     </tbody>
                 </table>
             </div>
+            <div class="container my-2">
+                <h3> My Files</h3>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody id="tbodyFiles">
+
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="col align-items-start">
             <form id="note-form">
