--- a/src/uwsgi/app/templates/add.html
+++ b/src/uwsgi/app/templates/add.html
@@ -6,7 +6,7 @@
     <title>Ochrona Projekt</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           crossorigin="anonymous">
-    <script src="/static/scripts/newNote.js"></script>
+    <script src="/static/scripts/add.js"></script>
     <link href="/static/styles/afterLog.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -38,8 +38,8 @@
         <div class="col align-items-start">
             <form id="file-form">
                 <h3>New file</h3>
-                <input type="file" class="form-control-file" id="file">
-                <input type="submit" id="saveBtnFile" class="btn btn-primary my-2" value="Save">
+                <input type="file" class="form-control-file" id="file" name="file" accept="application/pdf, image/jpeg, image/png, .txt">
+                <input type="submit" id="saveFileBtn" class="btn btn-primary my-2" value="Save">
             </form>
             <div class="alert alert-danger" role="alert" id="alertFile">
 
