Dodanie monitorowania adresow na ktorych jestesmy zalogowani

--- a/src/uwsgi/app/templates/after_log.html
+++ b/src/uwsgi/app/templates/after_log.html
@@ -51,6 +51,7 @@
                     </tbody>
                 </table>
             </div>
+
             <div class="container my-2">
                 <h3> My Files</h3>
                 <table class="table">
@@ -61,6 +62,21 @@
                     </tr>
                     </thead>
                     <tbody id="tbodyFiles">
+
+                    </tbody>
+                </table>
+            </div>
+
+            <div class="container my-2">
+                <h3>You are loged on</h3>
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Title</th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody id="tbodyIps">
 
                     </tbody>
                 </table>
