Dodanie CSP oraz skryptu do strony odzyskiwania hasla

--- a/src/uwsgi/app/templates/add.html
+++ b/src/uwsgi/app/templates/add.html
@@ -14,7 +14,7 @@
 <div class="container">
     <div class="row float-right">
         <a class="btn btn-primary mx-2" href="/user/">Home</a>
-        <a class="btn btn-primary mx-2" href="/note/">New note</a>
+        <a class="btn btn-primary mx-2" href="/note/">New post</a>
         <form method="post" action="https://localhost/logout/">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <input type="submit" class="btn btn-primary mx-2" value="Log out">
