--- a/src/uwsgi/app/templates/forgot_password.html
+++ b/src/uwsgi/app/templates/forgot_password.html
@@ -6,23 +6,22 @@
     <title>Ochrona Projekt</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           crossorigin="anonymous">
-    <!--    <script src="/static/scripts/main.js"></script>-->
     <link href="/static/styles/signin.css" rel="stylesheet" type="text/css">
+    <script src="/static/scripts/forgotPass.js"></script>
 </head>
 <body class="text-center">
 
 <div class="container">
 
     <div class="col align-items-start">
-        <form id="login-form" method="POST" action="https://localhost/password/" target="dummyframe">
+        <form id="email-form">
             <h1 class="h3 mb-3 fw-normal">Enter your email</h1>
             <input type="text" id="inputUsernameS" class="form-control my-1" name="email" placeholder="Email"
                    required
                    autofocus>
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <input class="btn btn-lg btn-primary" type="submit" value="Submit">
+            <input id="submit" class="btn btn-lg btn-primary" type="submit" value="Submit">
         </form>
-        <iframe name="dummyframe" style="display: none;"></iframe>
     </div>
 
 </div>
