--- a/src/uwsgi/app/templates/reset_password.html
+++ b/src/uwsgi/app/templates/reset_password.html
@@ -7,26 +7,23 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           crossorigin="anonymous">
     <link href="/static/styles/signin.css" rel="stylesheet" type="text/css">
+        <script src="/static/scripts/resetPass.js"></script>
 </head>
 <body class="text-center">
 
 <div class="container">
 
     <div class="col align-items-start">
-        <form id="login-form" method="POST" action="https://localhost/password/{{token}}" target="dummyframe">
+        <form id="password-form">
             <h1 class="h3 mb-3 fw-normal">Enter new password</h1>
             <input type="password" id="inputUsernameS" class="form-control my-1" name="password" placeholder="Password"
                    required
                    autofocus>
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <input class="btn btn-lg btn-primary" type="submit" value="Submit">
+            <input id="token" type="hidden" value="{{ token }}">
+            <input id="submit" class="btn btn-lg btn-primary" type="submit" value="Submit">
         </form>
     </div>
-    <iframe name="dummyframe" style="display: none;"></iframe>
-    <div class="alert alert-success" role="alert" style="display:{{visible}};">
-        Password changed
-    </div>
-
 </div>
 
 </body>
